# deepseek

./: Dockerfile  deployment.yaml  entrypoint.sh  pyproject.toml  requirements.txt  server.py
app/: main.py
