[project]
name = "deepseek"
version = "0.1.0"
description = ""
authors = [
    {name = "tig0826",email = "tigcr0826@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "discord (>=2.3.2,<3.0.0)",
    "transformers (>=4.48.3,<5.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "vllm (>=0.7.2,<0.8.0)",
    "ipython (<8.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "huggingface-hub (>=0.28.1,<0.29.0)",
    "accelerate (>=0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

